# weavehack3

./: .gitignore  .railwayignore  CLAWGUARD_ARCHITECTURE.md  CONTEXT_ANALYSIS.md  CURSOR_MCP_CONFIG.json  CURSOR_MCP_SETUP.md  DEPLOYMENT.md  HACKATHON_DEMO_PLAN.md  HACKATHON_PLAN.md  INTEGRATE_EXTERNAL_AGENTS.md  LOBSTERPOT_PROXY.md  MARIMO_AND_OPENCLAW_STATUS.md  MARIMO_WEAVE_DASHBOARD.md  MARIMO_WEAVE_OPENCLAW_CONNECTION.md  MCP_QUICK_START.md  MCP_SERVER_README.md  MULTI_AGENT_INTEGRATION.md  OPENCLAW_CLARIFICATION.md  OPENCLAW_GASTOWN_SETUP.md  PLAN.md  PUSH_TO_GITHUB.md  Procfile  QUICK_START.md  RAILWAY_DEPLOYMENT.md  README.md  REDIS_PROMPT_DATABASE.md  RLM_IMPLEMENTATION.md  SELF_IMPROVEMENT_EXPLAINED.md  START_MCP_SERVER.md  STATUS.md  VLA_ARCHITECTURE.md  WANDB_MCP_TOOLS.md  WEAVE_EVALUATION.md  WEB_UI_SUMMARY.md  biolink_depot_accurate_pricing.json  biolink_depot_pricing.json  biolink_depot_pricing_summary.json  nixpacks.toml  pyproject.toml  railway.toml  (+2 more)
api/: __init__.py  main.py
demos/: README.md  WEAVE_IMPROVEMENT_SHOWCASE.md  biolink_pricing_demo.md  biolink_pricing_task.txt  run_biolink_demo.py
examples/: multi_agent_demo.py  openclaw_integration_demo.py  simple_multi_agent_demo.py  ultralong_context_demo.py
marimo/: weave_dashboard.py
notes/: redis_example.cs
scripts/: README_SUBMISSION.md  auto_fill_submission.py  extract_biolink_depot_pricing.py  extract_biolink_pricing.py  generate_submission_pack.py  hackathon_demo.py  mcp_stdio_server.py  quick_demo.py  quick_test.py  run_biolink_pricing_mcp.py  run_biolink_via_web_ui.md  run_demo.py  (+6 more)
(+50 files in other folders)
